[gd_scene load_steps=5 format=3 uid="uid://bffdb382ey5hd"]

[ext_resource type="Script" path="res://menus/menu_scripts/success_scene.gd" id="1_mgnrk"]
[ext_resource type="FontFile" uid="uid://cks3khdvnf0vp" path="res://windows_command_prompt.ttf" id="2_114et"]
[ext_resource type="Texture2D" uid="uid://budh8ujdl5y88" path="res://assets/level/pause_background.png" id="2_ny3xv"]

[sub_resource type="Theme" id="Theme_ljcff"]
default_font = ExtResource("2_114et")
default_font_size = 32

[node name="success_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgnrk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Background" type="Sprite2D" parent="MarginContainer"]
position = Vector2(640, 360)
texture = ExtResource("2_ny3xv")

[node name="Header" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.768627, 0.588235, 0.176471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 14
theme_override_constants/shadow_offset_y = 14
theme_override_constants/outline_size = 14
theme_override_constants/shadow_outline_size = 14
theme_override_fonts/font = ExtResource("2_114et")
theme_override_font_sizes/font_size = 128
text = "Congratulations"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.909804, 0.819608, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("2_114et")
theme_override_font_sizes/font_size = 32
text = "You have successfully let 25 permitted citizens into Spudorado.

You now have the choice to rejoin your family or work your next shift tomorrow.

Choose wisely, for you only have one life."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_ljcff")
theme_override_colors/font_color = Color(0.909804, 0.819608, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
text = "Work your next shift (continue)"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_ljcff")
theme_override_colors/font_color = Color(0.909804, 0.819608, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
text = "Replant with your family (quit)"

[connection signal="pressed" from="MarginContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
